Interpreter/grammar.txt
Expr ::= Let | Fun | expr
Let ::= 'let' Id '=' Expr 'in' Expr
Fun ::= 'fun' Id '->' Expr
expr ::= term (+|- term)
factor ::= funcall
funcall ::= primary | primary (primary)*
Brackets ::= '(' Expr ')'
Id ::= Letter(Letter|Digit)*
Number ::= Digit(Digit)* 
